Added new build

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/version-01-01.loader.js";
+      var loaderUrl = buildUrl + "/version-01-03.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/version-01-01.data.br",
-        frameworkUrl: buildUrl + "/version-01-01.framework.js.br",
-        codeUrl: buildUrl + "/version-01-01.wasm.br",
+        dataUrl: buildUrl + "/version-01-03.data.unityweb",
+        frameworkUrl: buildUrl + "/version-01-03.framework.js.unityweb",
+        codeUrl: buildUrl + "/version-01-03.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "B2BTest",
